# rust-notepad

./: .gitignore  Cargo.toml  build.rs  csv.c  fuzzySorter.c
ext/: fuzzy.c  uuid.c
ext/csv/: csv.c  csv.h  extension.c
ext/fuzzy/: extension.c  fuzzy.h  fuzzySorter.c  levenshtein.c
ext/uuid/: extension.c
migrations/: 20231204081533_init.sql  20231204094500_init_note.down.sql  20231204094500_init_note.sql  20231204094500_init_note.up.sql  20231213015944_init_fs.down.sql  20231213015944_init_fs.up.sql
src/: commons.rs  main.rs  queries.rs
src/views/: fs.rs  home.rs  mod.rs  notes.rs  utils.rs
templates/: detail_note.html  home.html  list_notes.html
templates/fragments/: notification.html
templates/fs/: explorer.jinja  index.jinja  search-results.jinja
templates/layouts/: main.html
tests/: csv.rs
tests/data/: worker.csv
utils/: scrapper.py
